--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,23 +1,41 @@
 {
+  "General": {
+    "Or": "Or",
+    "Begin": "Begin Today",
+    "TopDescription": "Sign In or Register to Explore All Our Features",
+    "Yes": "Yes",
+    "No": "No",
+    "NoVerifCode": "Didn’t receive verification codes? click to resend",
+    "Thanks": "Thank You!"
+  },
   "Onboarding": {
     "Step1": {
-      "Title": "Become a Part of Your Favourite Musician's Story",
+      "Title": "Grow Your Cult of Superfans",
       "Description": "We're excited to welcome you to our community of musicians and fans"
     },
     "Step2": {
-      "Title": "Grow With Your Favourite Musicians",
-      "Description": "Our tools enable you to personally support the growth and success of your favourite musicians"
+      "Title": "Engage and Monetise! ",
+      "Description": "Our tools enable you to identify and engage your loyal fans along your journey to stardom"
     },
     "Step3": {
-      "Title": "Get Rewarded and Recognised",
-      "Description": "We're all about enabling musicians and fans growing together. So flex your clout as the No.1 superfan"
+      "Title": "Grow and Reward the People that Love You!",
+      "Description": "Built for musicians. By musicians. It's the fans that matter most."
     }
   },
   "Login": {
-    "Title": "Begin Today",
-    "Description": "Sign In or Register to Explore All Our Features",
-    "Footer": "Become a Part of Your Favourite Musician's Story",
-    "ExploreGuest": "Explore as Guest"
+    "Title": "Login",
+    "Footer": "Grow Your Cult of Superfans",
+    "ExploreGuest": "Explore as Guest",
+    "DontHaveAccount": "Dont Have an Account?",
+    "ForgotPassword": "I Forgot My Password",
+    "Form": {
+      "Email": "Email",
+      "PhoneNumber": "Phone Number"
+    },
+    "Placeholder": {
+      "EmailOrUsername": "Email or Username",
+      "Password": "Password"
+    }
   },
   "SignUp": {
     "Title": "Sign Up",
@@ -34,6 +52,18 @@
     },
     "Footer": "Already Have an Account? "
   },
+  "OTP": {
+    "Phone": {
+      "Title": "Phone Verification Code",
+      "Subtitle": "Enter the verification code that we sent to {{phone}}"
+    },
+    "Email": {
+      "Title": "Email Verification Code",
+      "Subtitle": "We have sent a 6-digit verification code to your email {{email}}. Check your inbox and enter the verification code here"
+    },
+    "ResendAfter": "You can resend recovery code after ",
+    "ResendSuccess": "We've just resend a new code!"
+  },
   "Btn": {
     "Next": "Next",
     "Skip": "Skip",
@@ -41,6 +71,488 @@
     "SignIn": "Sign In",
     "SignUp": "Sign Up",
     "Submit": "Submit",
-    "Back": "Back"
+    "Back": "Back",
+    "ResendCode": "Resend Code",
+    "BuyNow": "Buy Now",
+    "AddToCart": "Add to Cart",
+    "Cancel": "Cancel",
+    "Purchase": "Purchase",
+    "Save": "Save",
+    "Edit": "Edit",
+    "VerificationCode": "Send Verification Code",
+    "TurnOff": "Turn Off",
+    "TurnOn": "Turn On",
+    "SignOut": "Sign Out",
+    "MaybeLater": "Maybe Later",
+    "Send": "Send",
+    "Create": "Create",
+    "Reply": "Reply",
+    "GoToHome": "Go To Home"
+  },
+  "ForgotPassword": {
+    "Title": "Update Your Password",
+    "Subtitle": "Enter Your Email Address to Recover Your Password",
+    "Placeholder": {
+      "Email": "Enter Your Email Address"
+    },
+    "Otp": {
+      "Title": "Input OTP",
+      "Subtitle": "Enter the recovery code we just sent to"
+    },
+    "Modal": {
+      "Title": "Set New Password",
+      "Subtitle": "Are you sure you want to leave your progress unsaved?"
+    }
+  },
+  "Preference": {
+    "Genre": "Select Your Favorite Genres",
+    "Mood": "Current Mood?",
+    "Support": "I’m Here To",
+    "Musician": "Who To Follow",
+    "Follow": "Follow",
+    "Following": "Following"
+  },
+  "Home": {
+    "Topbar": {
+      "Hi": "Hi, {{name}}",
+      "Search": {
+        "Title": "Search",
+        "Song": "Song",
+        "Musician": "Musician",
+        "Fans": "Fans",
+        "Album": "Album",
+        "Merch": "Merch",
+        "Event": "Event",
+        "Playlist": "Playlist"
+      }
+    },
+    "Tab": {
+      "TopMusician": {
+        "Title": "TOP MUSICIAN",
+        "Follow": "Follow",
+        "Unfollow": "Unfollow",
+        "Tip": "Tip",
+        "Profile": "Go to Profile"
+      },
+      "TopSong": {
+        "Title": "TOP SONG",
+        "Playlist": "Add to Playlist",
+        "Tip": "Send Tip",
+        "Queue": "Add to Queue",
+        "Share": "Share Music",
+        "Credit": "Show Credits"
+      },
+      "TopPost": {
+        "Title": "TOP POST",
+        "Filter": {
+          "Title": "Filter by",
+          "Today": "Today",
+          "LastWeek": "Last Week",
+          "ThisMonth": "This Month"
+        },
+        "Category": {
+          "Title": "Category",
+          "All": "All",
+          "ComingUp": "Coming Up",
+          "Tour": "Tour",
+          "DailyLife": "Daily Life",
+          "BTS": "Behind The Scenes",
+          "Backstage": "Backstage",
+          "Highlight": "Highlight Post"
+        }
+      }
+    }
+  },
+  "Feed": {
+    "Title": "Feed",
+    "Public": "Public",
+    "Exclusive": "Exclusive",
+    "Sort": {
+      "Title": "Sort by",
+      "Latest": "Latest",
+      "Popular": "Popular"
+    }
+  },
+  "Event": {
+    "Title": "Event",
+    "Quantity": "Quantity",
+    "Description": "Description",
+    "Concert": {
+      "Title": "Concert",
+      "NoConcert": "No Event Available",
+      "Detail": "Ticket Details",
+      "LineUp": "Line-Up",
+      "Class": "Select Class"
+    },
+    "Merch": {
+      "Title": "Merch",
+      "NoMerch": "No Merch Available",
+      "Detail": "Merch Details",
+      "Size": "Size",
+      "Color": "Color"
+    }
+  },
+  "Profile": {
+    "Label": {
+      "Description": "I'm here to support musicians",
+      "Following": "FOLLOWING",
+      "Liked": "LIKED SONGS",
+      "Point": "POINTS",
+      "CreatedBy": "Created by",
+      "NoMusician": "You don’t have contributions to any musicians",
+      "NoBadge": "You don’t have any badges"
+    },
+    "Button": {
+      "Edit": "Edit Profile",
+      "CreatePlaylist": "Create New Playlist"
+    },
+    "Tab": {
+      "Playlist": "PLAYLIST",
+      "TopMusician": "TOP MUSICIAN",
+      "Badge": "BADGE"
+    },
+    "Edit": {
+      "Title": "Edit Profile",
+      "Bio": "Bio",
+      "ProfilePicture": "Edit Display Profile",
+      "HeaderPicture": "Edit Header",
+      "Take": "Take Photo",
+      "Add": "Add Photo From Gallery",
+      "Delete": "Delete Photo"
+    }
+  },
+  "Musician": {
+    "Label": {
+      "Fans": "FANS",
+      "Follow": "FOLLOW",
+      "Following": " FOLLOWING",
+      "Tip": "Tip",
+      "Followers": "FOLLOWERS",
+      "Releases": "RELEASES",
+      "Playlists": "PLAYLIST",
+      "Rank": "RANK",
+      "About": "About",
+      "Social": "Social Media",
+      "Origin": "Origin",
+      "Active": "Years Active",
+      "Members": "Members",
+      "Website": "Website",
+      "Photos": "Photos",
+      "Album": "Album",
+      "Merch": "Merch",
+      "Exclusive": "Exclusive Daily Content",
+      "Musicians": "People who might fit your interest"
+    },
+    "Tab": {
+      "Profile": "PROFILE",
+      "Post": "POST",
+      "Exclusive": "EXCLUSIVE",
+      "Music": "MUSIC",
+      "Fans": "FANS"
+    }
+  },
+  "ExclusiveContent": {
+    "Title": "Exclusive Content",
+    "Content": "Content",
+    "Choose": "Choose A Plan",
+    "Weekly": "Weekly",
+    "Monthly": "Monthly",
+    "Yearly": "Yearly",
+    "Week": "Week",
+    "Month": "Month",
+    "Year": "Year",
+    "Support": "Add support to your plan",
+    "Optional": "Support (optional)"
+  },
+  "Setting": {
+    "Title": "Settings",
+    "EnterVerifCode": "Enter Verification Code",
+    "Account": {
+      "Title": "Account",
+      "Label": {
+        "Username": "Username",
+        "Fullname": "Full Name",
+        "Gender": "Gender",
+        "Location": "Location"
+      },
+      "Placeholder": {
+        "Username": "Add Username",
+        "Fullname": "Add Full Name",
+        "Gender": "Select Gender",
+        "Location": "Select Location"
+      }
+    },
+    "Password": {
+      "Title": "Change Password",
+      "Label": {
+        "Old": "Input Old Password",
+        "New": "New Password",
+        "Repeat": "Repeat Password"
+      }
+    },
+    "Email": {
+      "Title": "Email",
+      "Label": {
+        "Add": "Add Email",
+        "Change": "Change Email",
+        "Old": "Old Email",
+        "New": "New Email",
+        "Sso": "SSO Email Can`t Be Changed",
+        "Password": "Current Password"
+      },
+      "Placeholder": {
+        "Email": "Add Email"
+      }
+    },
+    "Phone": {
+      "Title": "Phone Number",
+      "Label": {
+        "Change": "Change Phone Number",
+        "Add": "Add Phone Number",
+        "Old": "Old Phone Number",
+        "New": "New Phone Number",
+        "Password": "Current Password"
+      }
+    },
+    "Shipping": {
+      "Title": "Shipping Information",
+      "Label": {
+        "Email": "Email",
+        "Phone": "Phone Number",
+        "Fullname": "Full Name",
+        "State": "State/Province",
+        "Country": "Country",
+        "Postal": "Postal Code",
+        "City": "City",
+        "Address": "Address"
+      },
+      "Placeholder": {
+        "Email": "Add Email",
+        "Phone": "Add Phone Number",
+        "Fullname": "Add Full Name",
+        "State": "Select State/Province",
+        "Country": "Select Country",
+        "Postal": "Add Postal Code",
+        "City": "Select City",
+        "Address": "Add Address"
+      }
+    },
+    "Preference": {
+      "Title": "Preferences",
+      "Label": {
+        "Genre": "Genre",
+        "Mood": "Mood"
+      },
+      "Placeholder": {
+        "Genre": "Select Genre",
+        "Mood": "Select Mood"
+      }
+    },
+    "Tips": {
+      "Title": "Tips & Subscriptions",
+      "Tab": {
+        "Donation": "Donation",
+        "Subs": "Subscription"
+      },
+      "Filter": {
+        "Duration": "Duration",
+        "All": "All",
+        "OneTime": "One Time",
+        "Weekly": "Weekly",
+        "Monthly": "Monthly",
+        "Yearly": "Yearly"
+      },
+      "Label": {
+        "Past": "Past",
+        "Current": "Current",
+        "TipType": "Tip Type",
+        "AddMoreCoin": "Add More Coin",
+        "YourCoin": "Your Coin",
+        "InputDonation": "Input Donation"
+      },
+      "Menu": {
+        "Donation": {
+          "GoToMusician": "Go To Musician",
+          "Stop": "Stop Donation"
+        },
+        "Subs": {
+          "GoToMusician": "Go To Musician",
+          "Unsubs": "Unsubscribe"
+        }
+      }
+    },
+    "Referral": {
+      "Title": "Referral Code",
+      "ReferFriend": {
+        "Title": "REFER A FRIEND",
+        "Text1": "Refer a friend and earn 50 free credits",
+        "Text2": "Use your @username as referral code",
+        "Btn1": "Refer a friend using link",
+        "Btn2": "Read Terms of Use"
+      },
+      "UseRefer": {
+        "Title": "USE REFERRAL",
+        "Text1": "Earn 50 free credits",
+        "Text2": "Your Friend’s Referral Code",
+        "Text3": "Refferal code can not be changed"
+      },
+      "OnBoard": {
+        "Title": "Do you have a referral code?",
+        "Subtitle": "Enter your code to jumpstart your Sunny Side Up Journey!",
+        "Actived": "Referral Activated",
+        "Success": "Congratulations! now you will get 5% credit every transaction!"
+      }
+    },
+    "Language": {
+      "Title": "Language",
+      "Placeholder": "Select Language"
+    },
+    "Notification": {
+      "Title": "Push Notifications",
+      "Label": {
+        "Title": "Turn On Push Notifications",
+        "Subtitle": "You haven't activated push notifications on your phone. Activate now to get the latest info!"
+      }
+    },
+    "Report": {
+      "Title": "Send Report",
+      "Modal": {
+        "Title": "Need help?",
+        "Bug": "Report a Bug",
+        "TextBug": "Something in the app is broken or doesn’t work as expected",
+        "Suggest": "Suggest an Improvement",
+        "TextSuggest": "New ideas or desired enhancement for this app"
+      },
+      "Placeholder": {
+        "Email": "Enter your email",
+        "Text": "How can we improve your experience using this app?"
+      }
+    },
+    "Helps": {
+      "Title": "Helps"
+    },
+    "TnC": {
+      "Title": "Terms and Service"
+    },
+    "Privacy": {
+      "Title": "Privacy Policy"
+    },
+    "Version": {
+      "Title": "Version"
+    }
+  },
+  "Music": {
+    "Label": {
+      "NowPlaying": "Now Playing",
+      "SongDetails": "Song Details",
+      "SongDesc": "Song Description",
+      "AddToMyPlaylist": "Add to My Playlist",
+      "By": "by",
+      "SongList": "Song List",
+      "AddSong": "Add Song",
+      "CreatedOn": "Created on",
+      "NoSong": "No Song Added",
+      "Songs": "Songs"
+    },
+    "NewPlaylist": {
+      "Title": "New Playlist",
+      "Cover": "Edit Playlist Cover",
+      "Placeholder": {
+        "Name": "Playlist Name",
+        "Desc": "Playlist Description"
+      },
+      "Visibility": {
+        "Title": "Visibility",
+        "Public": "Public",
+        "Private": "Private"
+      }
+    },
+    "Playlist": {
+      "Edit": "Edit Playlist",
+      "Delete": "Delete Playlist",
+      "Share": "Share Playlist"
+    },
+    "Credit": {
+      "Title": "Show Credit",
+      "SingBy": "Sing By",
+      "Featuring": "Featuring",
+      "Writer": "Song Writer",
+      "Format": "Format",
+      "Label": "Label Name",
+      "Genre": "Genre",
+      "Release": "Release Date",
+      "Copyright": "Copyright"
+    }
+  },
+  "Post": {
+    "Title": "Post",
+    "Label": {
+      "RepliedTo": "replied to"
+    },
+    "Placeholder": {
+      "Write": "Write your reply"
+    }
+  },
+  "Notification": {
+    "Title": "Notification"
+  },
+  "Modal": {
+    "EditProfile": {
+      "Title": "Edit Profile",
+      "Subtitle": "Are you sure to finish edit profile?"
+    },
+    "Playlist": {
+      "Save": "Are you sure you want to save your new playlist?",
+      "Update": "Are you sure you want to update your playlist?",
+      "Delete": "Are you sure you want to delete this playlist?",
+      "Cover": "Edit Playlist Cover"
+    },
+    "Donation": {
+      "Unsubs": "Are you sure you want to unsubscribe to {{name}}?"
+    },
+    "Email": {
+      "Add": "Are you sure you want to add new email?",
+      "Change": "Are you sure you want to change your email?"
+    },
+    "Phone": {
+      "Add": "Are you sure you want to add new phone number?",
+      "Change": "Are you sure you want to change your phone number?"
+    },
+    "Report": {
+      "Success": "We’ve received your feedback. Thank you for helping us make sunny Side Up better.",
+      "Back": "Back to Settings"
+    },
+    "SignOut": "Are you sure you want to sign out?",
+    "Guest": {
+      "Title": "Sign Up or Sign In",
+      "Subtitle": "You are exploring as guest, sign up or sign in to enoy full content"
+    }
+  },
+  "EmptyState": {
+    "Donate": "Seems like you aren’t rewarded any musician yet, try to donate your favorite musician",
+    "Exclusive": "You don’t have access to any exclusive content. Try subscribing to your favorite musician",
+    "NoData": "No data available",
+    "FollowMusician": "This musician doesn't seem to have any posts right now. Try following more musicians",
+    "Search": {
+      "Album": "Album not found",
+      "Event": "Event not found",
+      "Merch": "Merch not found",
+      "Musician": "Musician not found",
+      "Playlist": "Playlist not found",
+      "Song": "Song not found",
+      "Fans": "Fans not found"
+    },
+    "NoAlbum": "No Album Available",
+    "NoMerch": "No Merch Available",
+    "NoInfo": "No Information Given.",
+    "NoPhoto": "No Photos Available"
+  },
+  "Guest": {
+    "Title": "Sign Up to Interact with Musician",
+    "Subtitle": "When you are sign up, you can",
+    "UnlimitedSong": "Play Unlimited Song",
+    "GetEvent": "Get Latest Event Update",
+    "GetExclusive": "Get Exclusive Content",
+    "Support": "Support Your Musician"
   }
 }
