--- a/src/locale/zh.json
+++ b/src/locale/zh.json
@@ -9,7 +9,12 @@
     "Thanks": "Thank You!",
     "LinkCopied": "Link have been copied to clipboard!",
     "Followers": "追蹤者",
-    "Listeners": "Listeners"
+    "Listeners": "Listeners",
+    "Share": {
+      "Feed": "Share Feed",
+      "Album": "Share Album",
+      "Music": "Share Music"
+    }
   },
   "Onboarding": {
     "Step1": {
