feat: static data translation

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -537,7 +537,11 @@
     "Title": "Post",
     "Label": {
       "RepliedTo": "replied to",
-      "ViewMoreReply": "View more reply"
+      "ViewMoreReply": "View more reply",
+      "EditReply": "Edit Reply",
+      "DeleteReply": "Delete Reply",
+      "EditPost": "Edit Post",
+      "DeletePost": "Delete Post"
     },
     "Placeholder": {
       "Write": "Write your reply"
