--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -13,7 +13,8 @@
     "Share": {
       "Feed": "Share Feed",
       "Album": "Share Album",
-      "Music": "Share Music"
+      "Music": "Share Music",
+      "Playlist": "Share Playlist"
     }
   },
   "Onboarding": {
@@ -526,7 +527,8 @@
       "Edit": "Edit Playlist",
       "Delete": "Delete Playlist",
       "Share": "Share Playlist",
-      "Success": "Song have been added to playlist!"
+      "Success": "Song have been added to playlist!",
+      "Remove": "Remove from Playlist"
     },
     "Credit": {
       "Title": "Show Credit",
