fix: translation in topup

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -632,7 +632,7 @@
     "GetExclusive": "Get Exclusive Content",
     "Support": "Support Your Musician"
   },
-  "Topup": {
+  "TopUp": {
     "Title": "Top Up",
     "Subtitle1": "SSU Coin is your way to show your appreciation",
     "Subtitle2": "SSU Coin allows you to parcitipate in Musician’s upside and grow their community",
