--- a/src/locale/zh.json
+++ b/src/locale/zh.json
@@ -6,14 +6,14 @@
     "Yes": "是的",
     "No": "不",
     "NoVerifCode": "Didn’t receive verification codes? click to resend",
-    "Thanks": "Thank You!",
+    "Thanks": "謝謝你！",
     "LinkCopied": "Link have been copied to clipboard!",
     "Followers": "追蹤者",
-    "Listeners": "Listeners",
+    "Listeners": "人聽過",
     "Share": {
       "Feed": "Share Feed",
       "Album": "Share Album",
-      "Music": "Share Music",
+      "Music": "分享歌曲",
       "Playlist": "Share Playlist"
     }
   },
@@ -23,7 +23,7 @@
       "Description": "We're excited to welcome you to our community of musicians and fans"
     },
     "Step2": {
-      "Title": "Engage and Monetise! ",
+      "Title": "Engage and Monetise!",
       "Description": "Our tools enable you to identify and engage your loyal fans along your journey to stardom"
     },
     "Step3": {
@@ -633,7 +633,7 @@
     "GetExclusive": "獲取獨家內容",
     "Support": "支持你的音樂人"
   },
-  "Topup": {
+  "TopUp": {
     "Title": "Top Up",
     "Subtitle1": "SSU Coin is your way to show your appreciation",
     "Subtitle2": "SSU Coin allows you to parcitipate in Musician’s upside and grow their community",
