--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -491,12 +491,14 @@
         "Cover": "Exclusive Content Cover",
         "Title": "Title",
         "Description": "Description",
-        "Pricing": "Pricing Plan"
+        "Pricing": "Pricing Plan",
+        "Price": "Exclusive Content Price"
       },
       "Placeholder": {
         "Title": "Add Title",
         "Description": "Add Description about your content",
-        "Price": "Input Price (In Credit)"
+        "Price": "Input Price (In Credit)",
+        "Duration": "Select Duration"
       }
     }
   },
