--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -290,7 +290,8 @@
     "Optional": "Support (optional)",
     "InputBonus": "Input Bonus",
     "ErrorCoinBonus": "Insufficient coin, add more coin to give bonus",
-    "ErrorCoinSubs": "Insufficient coin, add more coin to subscribe"
+    "ErrorCoinSubs": "Insufficient coin, add more coin to subscribe",
+    "Edit": "Edit My Exclusive Content"
   },
   "Setting": {
     "Title": "Settings",
@@ -640,7 +641,9 @@
     "NoAlbum": "No Album Available.",
     "NoMerch": "No Merch Available.",
     "NoInfo": "No Information Given.",
-    "NoPhoto": "No Photos Available."
+    "NoPhoto": "No Photos Available.",
+    "NoECSetting": "You have not set your exclusive content yet, let’s try to make one",
+    "NoECData": "You don’t have any exclusive content, try to make a new one!"
   },
   "Guest": {
     "Title": "Sign Up to Interact with Musician",
