--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -90,6 +90,7 @@
     "Cancel": "取消",
     "Purchase": "購買",
     "Save": "保存",
+    "Close": "Close",
     "Edit": "編輯",
     "VerificationCode": "發送驗證碼",
     "TurnOff": "關閉",
@@ -531,7 +532,8 @@
       "Delete": "Delete Playlist",
       "Share": "Share Playlist",
       "Success": "Song have been added to playlist!",
-      "Remove": "Remove from Playlist"
+      "Remove": "Remove from Playlist",
+      "ViewAlbum": "View Album"
     },
     "Credit": {
       "Title": "顯示製作人",
@@ -572,6 +574,11 @@
     "Title": "通知"
   },
   "Modal": {
+    "Limit": {
+      "Title": "Limit Reached",
+      "Subtitle1": "You have reached the limit of uploading 10 photos, please delete some of your photos to upload new ones.",
+      "Subtitle2": "Some of your photos cannot be uploaded because you have reached your limit. You can only upload up to 10 photos in your profile. Delete some photos to upload the new ones."
+    },
     "EditProfile": {
       "Title": "編輯個人資料",
       "Subtitle": "Are you sure to finish edit profile?"
