--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -242,6 +242,7 @@
       "HeaderPicture": "Edit Header",
       "Take": "Take Photo",
       "Add": "Add Photo From Gallery",
+      "AddVideo": "Add Video From Gallery",
       "Delete": "Delete Photo",
       "Social": "Social Media Settings",
       "About": "Tell us about yourself",
