--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -243,6 +243,7 @@
       "Take": "Take Photo",
       "Add": "Add Photo From Gallery",
       "AddVideo": "Add Video From Gallery",
+      "AddVideoCamera": "Add Video From Camera",
       "Delete": "Delete Photo",
       "Social": "Social Media Settings",
       "About": "Tell us about yourself",
