--- a/src/locale/zhHK.json
+++ b/src/locale/zhHK.json
@@ -243,6 +243,7 @@
       "Take": "拍攝照片",
       "Add": "由相簿添加",
       "AddVideo": "Add Video From Gallery",
+      "AddVideoCamera": "Add Video From Camera",
       "Delete": "刪除照片",
       "Social": "Social Media Settings",
       "About": "Tell us about yourself",
