feat: update profile detail - update main tab styling - update follow text

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -283,7 +283,7 @@
   "Musician": {
     "Label": {
       "Fans": "FANS",
-      "Follow": "FOLLOW",
+      "Follow": "Follow",
       "Following": " FOLLOWING",
       "Tip": "Tip",
       "Followers": "FOLLOWERS",
