feat: cart screen - cart item component - cart price component

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -241,7 +241,7 @@
     "NoMore": "No more feeds"
   },
   "Event": {
-    "Title": "Event",
+    "Title": "Action",
     "Quantity": "Quantity",
     "Description": "Description",
     "Concert": {
@@ -782,5 +782,11 @@
       "Title": "Recover Account",
       "Subtitle": "Are you sure you recover your account?"
     }
+  },
+  "Cart": {
+    "Title": "Cart",
+    "SelectAll": "Select All",
+    "Delete": "Delete",
+    "Checkout": "Checkout"
   }
 }
