--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -800,5 +800,11 @@
       "Minimum": "Minimum Transactions",
       "TnC": "Terms & Conditions"
     }
+  },
+  "Checkout": {
+    "Title": "Checkout",
+    "AddShipping": "Add shipping location",
+    "Delivery": "Choose Delivery",
+    "Agent": "Delivery Agent"
   }
 }
