fix: follow button color in musician profile

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -284,7 +284,7 @@
     "Label": {
       "Fans": "FANS",
       "Follow": "Follow",
-      "Following": " FOLLOWING",
+      "Following": " Following",
       "Tip": "Tip",
       "Followers": "FOLLOWERS",
       "Releases": "RELEASES",
